--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
     <body>
         <div id="container">
             <h1>Modo claro e escuro</h1>
-            <label class="switch">
-                <input type="checkbox">
-                <span class="slider"></span>
+                <label class="switch">
+                    <input type="checkbox" onclick="changeMode()">
+                    <span class="slider"></span>
             </label>
         </div>
+        <script>
+            function changeMode() {
+            var element = document.body;
+            element.classList.toggle("dark-mode");
+        }
+        </script>
     </body>
 </html>
